--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,18 @@
 html{
 	font-size: 16px;
 }
+
 body {
 	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
 	justify-content:center;
 	align-items: center;
 	font-size: 1em;
-	flex-flow: row wrap;
 }
 
 .container{
 	max-width: 1200px;
-	margin: 0 auto;
+	width: 90%;
 	display: flex;
 	justify-content:center;
 	align-items: center;
@@ -43,12 +43,13 @@ h4 {
 p {
 	font-size: 0.875em;
 	line-height: 21px;
-  padding: 0 30px;
 }
 
 /*The widths are in a percentage!*/
 header {
-	margin: 0 auto;
+	/*margin: 0 auto;*/
+	text-align: center;
+	width:100%;
 	display: flex;
 	justify-content:center;
 	align-items: center;
@@ -57,18 +58,18 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 38px 0 10px 0;
+	padding: 38px 20px 20px 20px;
 	border-bottom: 3px solid #77a466;
-	width: 100%;
-	display:flex;
-	justify-content: center;
+	width:100%;
 }
+
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
 	padding: 30px 0;
+	width: 100%;
 }
 
 header nav ul {
@@ -80,8 +81,7 @@ header nav ul li {
 	font-weight: 700;
 	font-size: 0.875em;;
 	padding: 10px 10px;
-	display: flex;
-	justify-content: center;
+	list-style:none;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -91,24 +91,16 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
-	padding: 0 30px;
 	display: flex;
 	justify-content:center;
 	align-items: center;
 	flex-flow: row wrap;
 }
 
-.main-image {
-}
-
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
 	border-top: 3px solid #77a466;
-}
-
-.main-title {
 }
 
 .main-title h3 {
@@ -125,22 +117,13 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	flex-basis: 100%;
+	width: 100%;
 	border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-	padding: 10px 0;
 }
 
 /*.section-two {
 	border-left: 1px solid #eee;
 	border-right: 1px solid #eee;*/
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 0;
 }
 
 .menu {
@@ -155,27 +138,25 @@ header nav ul li a{
 .reviews {
 	color: #333;
 	font-size: 1em;
-	line-height: 21px;
-	padding:0;
+	line-height: 1.3125em;
 }
 
 .address {
 	font-size: 1em;
-	line-height: 24px;
-	padding:0;
+	line-height: 1.5em;
 }
 
 /*The widths are in a percentage!*/
 footer {
 	border-top: 3px solid #eee;
-	flex-basis: 100%;
-	margin: 0 auto;
+	width: 100%;
 	text-align: center;
 	display: flex;
 	justify-content:center;
 	align-items: center;
-	padding: 10px 0;
+	flex-flow: row wrap;
 }
+
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
